NIL check for empty titles and image_paths. 20 resuls per page. less boosting of dias results

--- a/config/locales/blacklight.da.yml
+++ b/config/locales/blacklight.da.yml
@@ -20,7 +20,7 @@ da:
       next: 'Næste &raquo;'
 
   blacklight:
-    application_name: 'Bifrost - Billeder'
+    application_name: 'Bifrost'
 
     header_links:
       login: 'Log ind'
