--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -20,7 +20,7 @@ en:
       next: 'Next &raquo;'
 
   blacklight:
-    application_name: 'DIAS'
+    application_name: 'Bifrost'
 
     header_links:
       login: 'Login'
